post detail initiated

--- a/sPay/templates/partial/footer.html
+++ b/sPay/templates/partial/footer.html
@@ -1,5 +1,9 @@
+{% load static %}
+
 <footer class="footer">
     <div class="content has-text-centered">
+        <img src="{% static 'css/ProNum1.png' %}" alt="Image" style="height: 16rem;">
+
         <p><strong>Nima Parandavar</strong></p>
         <p><a href="https://www.instagram.com/nima.parandavar/" class="is-link"><span><i
                         class="fa-brands fa-instagram"></i></span> nima.parandavar </a></p>
@@ -9,4 +13,5 @@
                         class="fa-brands fa-linkedin"></i></span> nima-p-753b97138</a></p>
 
     </div>
+
 </footer>
