--- a/sPay/templates/store_warehouse/post_detail.html
+++ b/sPay/templates/store_warehouse/post_detail.html
@@ -1,13 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-{{ post_detail.name }}
-{{ post_detail.code }}
 
-</body>
-</html>
+{% block content %}
+<div class="column is-6 head">
+    <div class="image block"><img src="./static/img.jpg" alt="#"></div>
+    <h1 class="title is-1 block">Title</h1>
+    <div class="block"><small>Category</small></div>
+    <p class="block">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, rem?</p>
+    <div class="block">Tags : <small>tags 1, tag 2, ...</small></div>
+    <hr>
+    <div>
+        <div class="block ah">
+            <div class="author">
+                <img src="./static/img.jpg" class="author-img" alt="">
+                <div style="font-size:35px; margin-right:30px"><span class="icon"><i
+                            class="fa-solid fa-user"></i></span> </div>
+                <h4 class="title is-4"><a href="#">Nima Parandavar</a></h4>
+            </div>
+            <div class="block like">
+                <form class="like-btn" method="post" data-url="url" id="likeForm">
+                    <input type="hidden" name="post_id" value="post_id" />
+                    <button type="submit" class="button"><span id="likeBtn" {% if action=='like'
+                            %}style="color:red;" {% endif %}><i class="fa-solid fa-heart"></i></span></button>
+                    <p id="likes">31</p>
+                </form>
+                <div>
+                    <button type="button" class="button"><span class="icon"><i class="fa-solid fa-share"></i></span></button>
+                </div>
+                <div>
+                    <button type="button" class="button"><span class="icon"><i class="fa-solid fa-copy"></i></span></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+
+    <h3 class="title is-3">Comments</h3>
+    <form class="field">
+        <div class="control block">
+            <input type="textarea" class="textarea is-small ta">
+        </div>
+        <div class="control block">
+            <input type="submit" class="button is-light" value="send">
+        </div>
+    </form>
+    <div class="comments">
+        <ul>
+            <li class="comment">
+                <div class="author">
+                    <img src="./static/img.jpg" class="author-img" alt="">
+                    <h4 class="title is-4">Nima Parandavar</h4>
+                </div>
+                <hr>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, asperiores.</p>
+            </li>
+            <li class="comment">
+                <div class="author">
+                    <img src="./static/img.jpg" class="author-img" alt="">
+                    <h4 class="title is-4">Nima Parandavar</h4>
+                </div>
+                <hr>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, asperiores.</p>
+            </li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
