--- a/sPay/templates/store_warehouse/post_list.html
+++ b/sPay/templates/store_warehouse/post_list.html
@@ -8,38 +8,48 @@
 
     <div class="container">
 
+
+        <br><br>
+
         <div class="columns">
-            <div class="column is-8 is-light">
-                <div class="card card-display">
-                    <div class="card-image image imagesize">
-                        <img src="{% static 'css/ProNum1.png' %}" alt="Image" style="height: 16rem;">
-                        <!-- <img src="#" alt="Image" style="height: 16rem;">  -->
-                    </div>
-                    <div class="card-top">
-                        <div class="card-content">
-                            <h3 class="title is-3">Title</h3>
-                            <div class="subtitle is-6 is-light">
-                                <span class="icon"><i class="fa-solid fa-user"></i></span>
-                                <span>Nima Parandavar</span>
-                                <span> | </span>
-                                <span>21h ago</span>
-                            </div>
-                            <div class="text content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, id.</p>
-                            </div>
-                            <div>
-                                <a href="#" class="button is-light card-item see-more">see more</a>
-                            </div>
+        <div class="column is-8 is-light">
+            {% for l in list %}
+            <div class="card card-display">
+                <div class="card-image image imagesize">
+<!--                        image -->
+                    {% if l.scan_same_QR.url %}
+                        <img src="{{l.scan_same_QR.url}}" alt="Image" style="height: 16rem;">
+                    {% else %}
+                        <img src="{% static 'no image.png' %}" alt="Image" style="height: 16rem;">
+                    {% endif %}
+                </div>
+                <div class="card-top">
+                    <div class="card-content">
+                        <h3 class="title is-3">{{ l.name | title }}</h3>
+                        <div class="subtitle is-6 is-light">
+                            <span class="icon"><i class="fa-solid fa-user"></i></span>
+                            <span>Nima Parandavar</span>
+                            <span> | </span>
+                            <span>21h ago</span>
+                        </div>
+                        <div class="text content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, id.</p>
+                        </div>
+                        <div>
+                            <a href="#" class="button is-light card-item see-more">see more</a>
                         </div>
                     </div>
                 </div>
-
-                <!-- pagination -->
-                {% include 'partial/pagination.html' %}
             </div>
-<!--            category -->
-            {% include 'partial/category.html' %}
+            {% endfor %}
+
+            <!-- pagination -->
+            {% include 'partial/pagination.html' %}
         </div>
+<!--            category -->
+        {% include 'partial/category.html' %}
+    </div>
+
     </div>
     <!-- footer -->
 
