--- a/sPay/templates/store_warehouse/first_page.html
+++ b/sPay/templates/store_warehouse/first_page.html
@@ -1,15 +1,14 @@
+{% extends 'base.html' %}
 {% load static %}
 
+{% block content %}
+<br>
+<br>
 
+<center>
 <br>
 <br>
-<div>
-    <a href="{% url 'store_warehouse:post_list' %}"> صفحه نمایش پست‌ها </a>
-</div>
-
-<br>
-<br>
-<h1>
+<h1 >
     در این صفحه اسکن <br>
     QrCode <br>
     قرار خواهد گرفت
@@ -17,4 +16,9 @@
 
 <br>
 <br>
-<img src="{% static 'css/Qr Code .jpeg' %}" alt="Image" style="height: 16rem;">
+
+
+    <img src="{% static 'css/Qr Code .jpeg' %}" alt="Image" style="height: 16rem;" >
+</center>
+{% endblock %}
+
