--- a/sPay/templates/store_warehouse/post_detail.html
+++ b/sPay/templates/store_warehouse/post_detail.html
@@ -1,13 +1,21 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block title %} post detail {% endblock %}
 
 
 {% block content %}
 <div class="column is-6 head">
-    <div class="image block"><img src="./static/img.jpg" alt="#"></div>
-    <h1 class="title is-1 block">Title</h1>
-    <div class="block"><small>Category</small></div>
-    <p class="block">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, rem?</p>
-    <div class="block">Tags : <small>tags 1, tag 2, ...</small></div>
+
+    {% if p_d.scan_same_QR %}
+        <div class="image block"><img src="{{ p_d.scan_same_QR.url }}" alt="#"></div>
+    {% else %}
+        <div class="image block"><img src="{% static 'css/no image.png' %}" alt="#"></div>
+    {% endif %}
+
+    <h1 class="title is-1 block">{{ p_d.title | title }}</h1>
+    <div class="block"><small>{{ p_d.Category }}</small></div>
+    <p class="block">{{ p_d.description }}</p>
+<!--    <div class="block">Tags : <small>tags 1, tag 2, ...</small></div>-->
     <hr>
     <div>
         <div class="block ah">
@@ -15,13 +23,12 @@
                 <img src="./static/img.jpg" class="author-img" alt="">
                 <div style="font-size:35px; margin-right:30px"><span class="icon"><i
                             class="fa-solid fa-user"></i></span> </div>
-                <h4 class="title is-4"><a href="#">Nima Parandavar</a></h4>
+                <h4 class="title is-4"><a href="#">{{ p_d.user.first_name | capfirst}} {{ p_d.user.last_name | capfirst}} </a></h4>
             </div>
             <div class="block like">
                 <form class="like-btn" method="post" data-url="url" id="likeForm">
                     <input type="hidden" name="post_id" value="post_id" />
-                    <button type="submit" class="button"><span id="likeBtn" {% if action=='like'
-                            %}style="color:red;" {% endif %}><i class="fa-solid fa-heart"></i></span></button>
+                    <button type="submit" class="button"><span id="likeBtn" ><i class="fa-solid fa-heart"></i></span></button>
                     <p id="likes">31</p>
                 </form>
                 <div>
@@ -44,25 +51,25 @@
             <input type="submit" class="button is-light" value="send">
         </div>
     </form>
-    <div class="comments">
-        <ul>
-            <li class="comment">
-                <div class="author">
-                    <img src="./static/img.jpg" class="author-img" alt="">
-                    <h4 class="title is-4">Nima Parandavar</h4>
-                </div>
-                <hr>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, asperiores.</p>
-            </li>
-            <li class="comment">
-                <div class="author">
-                    <img src="./static/img.jpg" class="author-img" alt="">
-                    <h4 class="title is-4">Nima Parandavar</h4>
-                </div>
-                <hr>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, asperiores.</p>
-            </li>
-        </ul>
-    </div>
+<!--    <div class="comments">-->
+<!--        <ul>-->
+<!--            <li class="comment">-->
+<!--                <div class="author">-->
+<!--                    <img src="./static/img.jpg" class="author-img" alt="">-->
+<!--                    <h4 class="title is-4">Nima Parandavar</h4>-->
+<!--                </div>-->
+<!--                <hr>-->
+<!--                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, asperiores.</p>-->
+<!--            </li>-->
+<!--            <li class="comment">-->
+<!--                <div class="author">-->
+<!--                    <img src="./static/img.jpg" class="author-img" alt="">-->
+<!--                    <h4 class="title is-4">Nima Parandavar</h4>-->
+<!--                </div>-->
+<!--                <hr>-->
+<!--                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, asperiores.</p>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </div>-->
 </div>
 {% endblock %}
