--- a/sPay/templates/store_warehouse/post_list.html
+++ b/sPay/templates/store_warehouse/post_list.html
@@ -17,10 +17,10 @@
             <div class="card card-display">
                 <div class="card-image image imagesize">
 <!--                        image -->
-                    {% if l.scan_same_QR.url %}
+                    {% if l.scan_same_QR %}
                         <img src="{{l.scan_same_QR.url}}" alt="Image" style="height: 16rem;">
                     {% else %}
-                        <img src="{% static 'no image.png' %}" alt="Image" style="height: 16rem;">
+                        <img src="{% static 'css/no image.png' %}" alt="Image" style="height: 16rem;">
                     {% endif %}
                 </div>
                 <div class="card-top">
@@ -28,15 +28,15 @@
                         <h3 class="title is-3">{{ l.name | title }}</h3>
                         <div class="subtitle is-6 is-light">
                             <span class="icon"><i class="fa-solid fa-user"></i></span>
-                            <span>Nima Parandavar</span>
+                            <span>{{ l.user.first_name }} {{ l.user.last_name }}</span>
                             <span> | </span>
-                            <span>21h ago</span>
+                            <span>{{ l.updated | timesince }}  ago </span>
                         </div>
                         <div class="text content">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, id.</p>
+                            <p>{{ l.description | truncatewords:10 }}</p>
                         </div>
                         <div>
-                            <a href="#" class="button is-light card-item see-more">see more</a>
+                            <a href="{% url 'store_warehouse:post_detail' l.id %}" class="button is-light card-item see-more">see more</a>
                         </div>
                     </div>
                 </div>
