social services, spatial services and footer initiated

--- a/sPay/templates/partial/footer.html
+++ b/sPay/templates/partial/footer.html
@@ -1,16 +1,39 @@
 {% load static %}
 
 <footer class="footer">
-    <div class="content has-text-centered">
+    <div class="content has-text-centered" dir="rtl">
         <img src="{% static 'css/ProNum1.png' %}" alt="Image" style="height: 16rem;">
+        <br><br>
+        <p>
+            در راستای وظایف مسئولیت اجتماعی، باید بصورت موازی یک سامانه برای
+            پردازش تصاویر (ماهواره‌ای-پهپادی) راه‌اندازی شود.
+            برای این پردازش نیاز به حمایت خرد جمعی می‌باشد.
+            و از سامانه انبارداری خرده‌فروشان باید بعنوان یک سکوی پرتاب استفاده شود.
+        </p>
 
-        <p><strong>Nima Parandavar</strong></p>
-        <p><a href="https://www.instagram.com/nima.parandavar/" class="is-link"><span><i
-                        class="fa-brands fa-instagram"></i></span> nima.parandavar </a></p>
-        <p><a href="https://github.com/nima-parandavar" class="is-link"><span><i
-                        class="fa-brands fa-git-square"></i></span> nima-parandavar </a></p>
-        <p><a href="https://www.linkedin.com/in/nima-p-753b97138/" class="is-link"><span><i
-                        class="fa-brands fa-linkedin"></i></span> nima-p-753b97138</a></p>
+        <p>
+            به زبان ساده پردازش تصاویر (پهپادی-ماهواره‌ای) به معنای تشخیص یک یا چند عارضه در این تصاویر می‌باشد و
+            نیاز است با تلفن همراه تصاویر ژئوتگ (زمین‌مرجع) از عوارض زیر گرد‌اوری شود.
+            <br>
+            عوارض شامل تک تک محصولات کشاورزی، باغی، فنولوژی(دوره رشد)، ارتفاع محصول، تنش و آفات مرتبطه،
+            زمین‌شناسی، منابع معدنی، منابع طبیعی، جنگل‌ها، مراتع، پسماند، دست‌ساز بشر،
+            گازها، آئروسل، دما، ارتفاع از سطح دریا، … و بصورت کلی هر آنچه روی سطح کره زمین می‌شود.
+            <br>
+            * توضیحات کامل به زبان ساده در مورد مفاهیم تصاویر (پهپادی-ماهواره‌ای)،
+            روش‌های پردازش و چرایی نیاز به خرد جمعی  در یک فایل ویدئو به آدرس زیر تهیه و بارگذاری شده است.
+            <br><br>
+            <a href="https://www.aparat.com/v/lKy6j">
+                https://www.aparat.com/v/lKy6j
+            </a>
+        </p>
+
+<!--        <p><strong> کیارش بروشان </strong></p>-->
+<!--        <p><a href="https://www.instagram.com/nima.parandavar/" class="is-link"><span><i-->
+<!--                        class="fa-brands fa-instagram"></i></span> nima.parandavar </a></p>-->
+<!--        <p><a href="https://github.com/nima-parandavar" class="is-link"><span><i-->
+<!--                        class="fa-brands fa-git-square"></i></span> nima-parandavar </a></p>-->
+<!--        <p><a href="https://www.linkedin.com/in/nima-p-753b97138/" class="is-link"><span><i-->
+<!--                        class="fa-brands fa-linkedin"></i></span> nima-p-753b97138</a></p>-->
 
     </div>
 
