--- a/sPay/templates/partial/navBar.html
+++ b/sPay/templates/partial/navBar.html
@@ -5,10 +5,12 @@
     <div class="navbar-menu">
         <div class="navbar-start">
 
-            <a href="{% url 'store_warehouse:first_page' %}" class="navbar-item p-2">Home</a>
-            <a href="#" class="navbar-item p-2">Categories</a>
+            <a href="{% url 'store_warehouse:first_page' %}" class="navbar-item p-2">خانه</a>
             <a href="{% url 'store_warehouse:post_list' %}" class="navbar-item p-2"> نمایش پست‌ها </a>
-            <a href="{% url 'store_warehouse:add_post' %}" class="navbar-item p-2"> add post </a>
+            <a href="{% url 'store_warehouse:add_post' %}" class="navbar-item p-2"> اضافه کردن کالا </a>
+            <a href="{% url 'spatial_services:spatial_service' %}" class="navbar-item p-2"> سرویس‌های مکان‌مبنا </a>
+            <a href="{% url 'social_media:video_call' %}" class="navbar-item p-2">پیام‌رسان ویدئوئی </a>
+
         </div>
 
 
@@ -17,7 +19,7 @@
 
             <a href="#" class="navbar-item">Log out</a>
             <a href="#" class="navbar-item dashboard">
-                Nima Parandavar
+                کیارش بروشان
                 <div>
                     <img src="#" alt="#" class="avatar" />
                 </div>
