--- a/sPay/templates/store_warehouse/post_list.html
+++ b/sPay/templates/store_warehouse/post_list.html
@@ -44,7 +44,10 @@
             {% endfor %}
 
             <!-- pagination -->
-            {% include 'partial/pagination.html' %}
+            <br><br>
+            <div>
+                {% include 'partial/pagination.html' %}
+            </div>
         </div>
 <!--            category -->
         {% include 'partial/category.html' %}
@@ -55,5 +58,7 @@
 
 </body>
 
+
 </html>
 {% endblock %}
+
