README.md modified and search box added

--- a/sPay/templates/store_warehouse/post_list.html
+++ b/sPay/templates/store_warehouse/post_list.html
@@ -51,6 +51,9 @@
         </div>
 <!--            category -->
         {% include 'partial/category.html' %}
+
+<!--            search -->
+        {% include 'partial/search.html' %}
     </div>
 
     </div>
