--- a/sPay/templates/store_warehouse/post_detail.html
+++ b/sPay/templates/store_warehouse/post_detail.html
@@ -27,6 +27,13 @@
            class="button is-light card-item see-more">اصلاح مشخصات کالا </a>
     </div>
     <hr>
+<!--        delete post -->
+        <div class="block">
+            <a href="{% url 'store_warehouse:DeletePost' p_d.id %}"
+               class="button is-light card-item see-more">حذف مشخصات کالا </a>
+        </div>
+    <hr>
+
     <hr>
 <!--    -->
     <div>
