--- a/sPay/templates/registration/login.html
+++ b/sPay/templates/registration/login.html
@@ -6,7 +6,9 @@
 <hr>
 <form method="post">
     {% csrf_token %}
-    {{ form }}
+    <div class="block">
+        {{ form }}
+    </div>
     <button type="submit"> Login </button>
 </form>
 {% endblock %}
