--- a/sPay/templates/store_warehouse/post_detail.html
+++ b/sPay/templates/store_warehouse/post_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} post detail {% endblock %}
+{% block title %} جزییات کالا {% endblock %}
 
 
 {% block content %}
