--- a/sPay/templates/store_warehouse/add_post.html
+++ b/sPay/templates/store_warehouse/add_post.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %} اضافه کردن کالا {% endblock %}
 {% block content %}
 <div class="container">
         <h1 class="title is-1"> اضافه کردن کالا </h1>
