--- a/sPay/templates/store_warehouse/post_edit.html
+++ b/sPay/templates/store_warehouse/post_edit.html
@@ -1,5 +1,7 @@
 
 {% extends 'base.html' %}
+{% block title %} ویرایش جزییات کالا {% endblock %}
+
 
 {% block content %}
 <h1> اصلاح مشخصات کالا </h1>
