block title added

--- a/sPay/templates/partial/navBar.html
+++ b/sPay/templates/partial/navBar.html
@@ -20,7 +20,7 @@
             # TODO logout doesn't work
                 <a href="{% url 'logout' %}" class="navbar-item"> خروج </a>
                 <a href="#" class="navbar-item dashboard">
-                    {{ user }}
+                    سلام: {{ user }}
                     <div>
                         <img src="#" alt="#" class="avatar" />
                     </div>
