--- a/sPay/templates/registration/login.html
+++ b/sPay/templates/registration/login.html
@@ -1,14 +1,15 @@
 
 {% extends 'base.html' %}
-{% block title %}Login{% endblock %}
+{% block title %} صفحه ورود {% endblock %}
+
 {% block content %}
-<h1> Login </h1>
+<h1> ورود </h1>
 <hr>
 <form method="post">
     {% csrf_token %}
     <div class="block">
         {{ form }}
     </div>
-    <button type="submit"> Login </button>
+    <button type="submit"> ورود </button>
 </form>
 {% endblock %}
