--- a/sPay/templates/partial/navBar.html
+++ b/sPay/templates/partial/navBar.html
@@ -16,20 +16,13 @@
 
 
         <div class="navbar-end">
-            # TODO logout doesn't work
 
             {% if user.is_authenticated %}
             {% csrf_token %}
 
-            # logout
-<!--                <form action="{% url 'logout' %}" method="post">-->
-<!--                    {% csrf_token %}-->
-<!--                    <button type="submit" class="dropdown-item">-->
-<!--                        <i class="fas fa-users mr-2"></i> logout-->
-<!--                    </button>-->
-<!--                </form>-->
-
-                <a href="{% url 'Account:logout' %}" class="navbar-item"> خروج </a>
+<!--            # logout-->
+                <p><a href="{% url 'Account:logout' %}"
+                      class="navbar-item"> خروج </a></p>
 
 
                 <a href="#" class="navbar-item dashboard">
@@ -48,8 +41,7 @@
 
             {% else %}
 
-            # login and register
-
+<!--            # login and register-->
                 <a href="{% url 'login' %}" class="navbar-item"> ورود </a>
                 <a href="{% url 'Account:register' %}" class="navbar-item"> ثبت‌نام </a>
 
