--- a/sPay/templates/store_warehouse/add_post.html
+++ b/sPay/templates/store_warehouse/add_post.html
@@ -2,21 +2,26 @@
 {% block title %} اضافه کردن کالا {% endblock %}
 {% block content %}
 <div class="container">
-        <h1 class="title is-1"> اضافه کردن کالا </h1>
-        <form method="post">
-            {% csrf_token %}
-<!--            {% for f in form %}-->
-<!--                -->
-<!--                <div class="block">-->
-<!--                    <label for="username" class="label">Username</label>-->
-<!--                    <div class="control"><input type="text" name="username" id="username" class="input"></div>-->
-<!--                </div>-->
+    <div class="row">
+        <div class="col-4">
 
-<!--            {% endfor %}-->
-            <div class="block">
-                {{ form.as_p }}
-                <button type="submit"> add post </button>
-            </div>
-        </form>
+            <h1 class="title is-1"> اضافه کردن کالا </h1>
+            <form method="post">
+                {% csrf_token %}
+    <!--            {% for f in form %}-->
+    <!--                -->
+    <!--                <div class="block">-->
+    <!--                    <label for="username" class="label">Username</label>-->
+    <!--                    <div class="control"><input type="text" name="username" id="username" class="input"></div>-->
+    <!--                </div>-->
+
+    <!--            {% endfor %}-->
+                <div class="block">
+                    {{ form }}
+                    <button type="submit" class="btn btn-success"> add post </button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
